[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Trello_Reporting_Tool.gd" type="Script" id=1]

[node name="Trello_Reporting_Tool" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = -212.0
margin_bottom = -40.0
rect_min_size = Vector2( 300, 260 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeoutTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Content" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Content"]
margin_right = 280.0
margin_bottom = 16.0
text = "Trello Reporting Tool"
align = 1

[node name="HSeparator" type="HSeparator" parent="Content"]
margin_top = 16.0
margin_right = 280.0
margin_bottom = 20.0

[node name="MarginContainer" type="MarginContainer" parent="Content"]
margin_top = 20.0
margin_right = 280.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 10 )

[node name="Form" type="VBoxContainer" parent="Content"]
margin_top = 30.0
margin_right = 280.0
margin_bottom = 245.0
custom_constants/separation = 0

[node name="ShortDescLabel" type="Label" parent="Content/Form"]
margin_right = 280.0
margin_bottom = 16.0
text = "Title"

[node name="ShortDescEdit" type="LineEdit" parent="Content/Form"]
margin_top = 16.0
margin_right = 280.0
margin_bottom = 42.0

[node name="Spacer" type="MarginContainer" parent="Content/Form"]
margin_top = 42.0
margin_right = 280.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 10 )

[node name="LongDescLabel" type="Label" parent="Content/Form"]
margin_top = 52.0
margin_right = 280.0
margin_bottom = 68.0
text = "Description"

[node name="LongDescEdit" type="TextEdit" parent="Content/Form"]
margin_top = 68.0
margin_right = 280.0
margin_bottom = 173.0
rect_min_size = Vector2( 0, 105 )
size_flags_vertical = 3

[node name="Spacer2" type="MarginContainer" parent="Content/Form"]
margin_top = 173.0
margin_right = 280.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 20 )

[node name="Custom" type="HBoxContainer" parent="Content/Form"]
margin_top = 193.0
margin_right = 280.0
margin_bottom = 215.0

[node name="Type" type="OptionButton" parent="Content/Form/Custom"]
margin_right = 138.0
margin_bottom = 22.0
size_flags_horizontal = 3
pressed = true

[node name="Send" type="Button" parent="Content/Form/Custom"]
margin_left = 142.0
margin_right = 280.0
margin_bottom = 22.0
size_flags_horizontal = 3
disabled = true
text = "Send"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feedback" type="VBoxContainer" parent="Content"]
visible = false
margin_top = 235.0
margin_right = 280.0
margin_bottom = 347.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Content/Feedback"]
margin_right = 280.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feedback_label" type="Label" parent="Content/Feedback"]
margin_top = 74.0
margin_right = 280.0
margin_bottom = 88.0
size_flags_horizontal = 3
text = "report"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_button" type="Button" parent="Content/Feedback"]
margin_top = 92.0
margin_right = 280.0
margin_bottom = 112.0
text = "Processing..."
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="text_changed" from="Content/Form/ShortDescEdit" to="." method="_on_ShortDescEdit_text_changed"]
[connection signal="text_changed" from="Content/Form/LongDescEdit" to="." method="_on_LongDescEdit_text_changed"]
[connection signal="pressed" from="Content/Form/Custom/Send" to="." method="_on_Send_pressed"]
[connection signal="pressed" from="Content/Feedback/close_button" to="." method="_on_close_button_pressed"]
